This file describes the changes to the Log for C++ library. See the CVS repository for more detailed descriptions.

2002-03-27 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
	* m4/AC_C_INT64_T.m4: #include <stdint.h> and remove $GCC check.
	* src/PatternLayout.cpp: #include <stdint.h>

	* configure.in, include/log4cpp/Portability.hh: back out strcasecmp() 
	stuff.
	
2002-03-22 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
	* include/log4cpp/FileAppender.hh, src/FileAppender.cpp:
	added 'append' and 'mode' options. 

	* include/log4cpp/RollingFileAppender.hh, include/log4cpp/Makefile.am,
	src/RollingFileAppender.cpp, src/SimpleConfigurator.cpp,
	src/Makefile.am: added RollingFileAppender contributed by
	Paulo Pizarro <paulo.pizarro@digitro.com.br>
	
2002-03-20 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
	* include/log4cpp/SimpleConfigurator.hh, src/SimpleConfigurator.cpp:
	added configure(std::istream&) method. (feature request #527760)

	* src/Log4cppCleanup.cpp: set variable to NULL after delete. 
	(feature request #527393)

	* include/log4cp/Category.hh, include/log4cpp/FixedContextCategory.hh,
	src/Category.hh, src/Category.cpp: added getAllAppenders() method.
	(feature request #527381)

	* src/Category.cpp: removeAllAppenders(): fix invalidated iterator
	usage. (bug #527467)
	
2002-03-17 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
	* tests/testbench.cpp: added missing 'std::' specifiers. (bug #530332)

	* src/SyslogAppender.cpp: fix format string bug. (bug #527475)

2002-02-18 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
	* Release as 0.3.0
	
	* INSTALL: added some platform specific build instructions.

	* tests/Clock.hh: replaced "long long" with int64_t.

	* src/OstringStream.cpp: fix typo.

	* src/Appender.cpp: added missing Mutex.

	* include/log4cpp/threading/OmniThreads.hh: added Doxygen comments.

	* NEWS: release 0.3.0.
	
	* configure.in: upped release to 0.3.0 and LT version to 4.0.0
	
2002-02-11 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>